Fixed font style
Fixed the font style on the tweet button and next quote button to match the rest of the text.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
 body {
-  background:#ADEAEA;font:18px amatic sc;
+  background:#ADEAEA;
+  font:18px amatic sc;
 }
 
 .quote {
 	font:24px pacifico;
 	text-align:center;
 	padding:20px;
+}
+
+.share-button {
+	font: 18px amatic sc;
+}
+
+.quote-button {
+	font: 18px amatic sc;
 }
